--- a/odoo/custom/src/private/tev_form/report/invoice.xml
+++ b/odoo/custom/src/private/tev_form/report/invoice.xml
@@ -79,7 +79,7 @@
                     </t>
                     <t t-if='o.invoice_date_due'>
                         <p style="margin-top:-28px;padding-left: 150px;"
-                            t-esc="o.get_formatted_date(o.invoice_date_due)"/>
+                            t-esc="o.get_formatted_date(o.invoice_date_due)" />
                     </t>
                 </div>
             </div>
@@ -99,6 +99,7 @@
                 <table style="table-layout: fixed;padding: 10px 10px;">
                     <t t-foreach="o.invoice_line_ids" t-as="line">
                         <tr>
+                            <!-- Column ID no. -->
                             <td
                                 style="width: 155px;max-width:155px; min-width:155px; text-align: center;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -109,13 +110,22 @@
                             <td style="width: 10px;max-width:10px; min-width:10px;">
                                 <span />
                             </td>
+                            <!-- Column Description -->
                             <td
                                 style="width: 330px;max-width:330px; min-width:330px;font-size: 18px;">
                                 <t t-if='line.price_unit > 0.0'>
-                                    <span t-esc="line.name.replace('['+line.product_id.default_code+']','')"
-                                        style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                    <t t-if="line.product_id.default_code">
+                                        <span
+                                            t-esc="line.name.replace('['+line.product_id.default_code+']','')"
+                                            style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                    </t>
+                                    <t t-if="not line.product_id.default_code">
+                                        <span t-field="line.name"
+                                            style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                    </t>
                                 </t>
                             </td>
+                            <!-- Column Quantity -->
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
                                 <t t-if="line.price_unit > 0">
@@ -123,6 +133,7 @@
                                         style="padding-left: 10px;padding-right: 5px;" />
                                 </t>
                             </td>
+                            <!-- Column Unit -->
                             <td class="text-center"
                                 style="width: 75px;max-width:75px; min-width:75px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -130,6 +141,7 @@
                                         style="padding-left: 10px;padding-right: 5px;" />
                                 </t>
                             </td>
+                            <!-- Column Unit Price -->
                             <td class="text-right"
                                 style="width: 125px;width: 125px;max-width:125px; min-width:125px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -137,6 +149,7 @@
                                         style="padding-left: 5px;padding-right: 5px;" />
                                 </t>
                             </td>
+                            <!-- Column Discount -->
                             <td class="text-right"
                                 style="width: 75px;max-width:75px; min-width:75px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -144,6 +157,7 @@
                                         style="margin-top:10px;" />
                                 </t>
                             </td>
+                            <!-- Column Amount -->
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
                                 <t t-if='line.price_unit > 0.0'>
