--- a/odoo/custom/src/private/tev_form/report/receipt_tax_invoice.xml
+++ b/odoo/custom/src/private/tev_form/report/receipt_tax_invoice.xml
@@ -96,6 +96,7 @@
                 <table style="table-layout: fixed;padding: 10px 10px;">
                     <t t-foreach="o.invoice_line_ids" t-as="line">
                         <tr>
+                            <!-- Column ID no. -->
                             <td
                                 style="width: 155px;max-width:155px; min-width:155px; text-align: center;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -106,13 +107,22 @@
                             <td style="width: 10px;max-width:10px; min-width:10px;">
                                 <span />
                             </td>
+                            <!-- Column Description -->
                             <td
                                 style="width: 330px;max-width:330px; min-width:330px;font-size: 18px;">
-                                <t t-if='line.price_unit > 0.0'></t>
-                                <span t-esc="line.name.replace('['+line.product_id.default_code+']','')"
-                                    style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
-
+                                <t t-if='line.price_unit > 0.0'>
+                                    <t t-if="line.product_id.default_code">
+                                        <span
+                                            t-esc="line.name.replace('['+line.product_id.default_code+']','')"
+                                            style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                    </t>
+                                    <t t-if="not line.product_id.default_code">
+                                        <span t-field="line.name"
+                                            style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                    </t>
+                                </t>
                             </td>
+                            <!-- Column Quantity -->
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -120,6 +130,7 @@
                                         style="padding-left: 10px;padding-right: 5px;" />
                                 </t>
                             </td>
+                            <!-- Column Unit -->
                             <td class="text-center"
                                 style="width: 75px;max-width:75px; min-width:75px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -127,6 +138,7 @@
                                         style="padding-left: 10px;padding-right: 5px;" />
                                 </t>
                             </td>
+                            <!-- Column Unit Price -->
                             <td class="text-right"
                                 style="width: 125px;width: 125px;max-width:125px; min-width:125px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -134,6 +146,7 @@
                                         style="padding-left: 5px;padding-right: 5px;" />
                                 </t>
                             </td>
+                            <!-- Column Discount -->
                             <td class="text-right"
                                 style="width: 75px;max-width:75px; min-width:75px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -141,6 +154,7 @@
                                         style="margin-top:10px;" />
                                 </t>
                             </td>
+                            <!-- Column Amount -->
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
                                 <t t-if='line.price_unit > 0.0'>
@@ -184,6 +198,23 @@
                 <p style="padding-left: 100px;">
                     <b style="font-size: 25px;" t-esc=" '('+ amount_text_thai +')' " />
                 </p>
+            </div>
+
+            <!-- note ท้ายเอกสาร -->
+            <div class="page"
+                style=" font-size: 23px;
+                        position: absolute;
+                        top: 1154px;
+                        padding-left: 10px;
+                        width:1000px;
+                        margin-left:50px;">
+                <span>ชำระเงินโดย : </span><input style="width:18px; height:18px; margin-left:2px;" /><span style="margin-left:2px;"> เงินสด</span>
+                <input style="width:18px; height:18px; margin-left:2px;" /><span style="margin-left:2px;"> เช็คธนาคาร........................................</span>
+                <span style="margin-left:2px;"> เลขที่เช็ค..........................................</span><span style="margin-left:2px;"> ลงวันที่........................</span>
+                <span style="margin-left:2px;"> จำนวนเงิน.................................</span><p/>
+                <input style="width:18px; height:18px; margin-left:92px;" /><span style="margin-left:2px;"> โอนเงิน ชื่อบัญชี "บริษัท ไทยอีวี จำกัด" ธนาคารกสิกรไทย สาขาถนนศรีนครินทร์กม.9 บัญชีออมทรัพย์ เลขที่ 036-1-58387-6</span><p/>
+                <input style="width:18px; height:18px; margin-left:92px;" /><span style="margin-left:2px;"> โอนเงิน ชื่อบัญชี "บริษัท ไทยอีวี จำกัด" ธนาคารกสิกรไทย สาขาถนนสาธุประดิษฐ์ บัญชีออมทรัพย์ เลขที่ 018-3-91106-6</span><p/>
+                <input style="width:18px; height:18px; margin-left:92px;" /><span style="margin-left:2px;"> โอนเงิน ชื่อบัญชี "บริษัท ไทยอีวี จำกัด" ธนาคารไทยพาณิชย์ สาขาเซ็นทรัลพระราม3 บัญชีออมทรัพย์ เลขที่ 165-2-85986-9</span>
             </div>
         </div>
     </template>
